<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ServicesActivity">

    <Button
        android:id="@+id/gas_stations"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="Gas Stations"
        android:textSize="30dp"
        android:onClick="start_options"/>

    <Button
        android:id="@+id/restaurants"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="Restaurants"
        android:textSize="30dp"
        android:onClick="start_options"/>

    <Button
        android:id="@+id/parks"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="Parks"
        android:textSize="30dp"
        android:onClick="start_options"/>


</LinearLayout>