<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsFragment">

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:text="Option 1"
        android:textSize="20dp"
        android:layout_marginTop="60dp"
        android:id="@+id/option_1" />
    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="220dp"
        android:layout_gravity="center_horizontal"
        android:text="Option 2"
        android:textSize="20dp"
        android:id="@+id/option_2" />
    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="380dp"
        android:layout_gravity="center_horizontal"
        android:text="Option 3"
        android:textSize="20dp"
        android:id="@+id/option_3" />

    <Button
        android:id="@+id/option_4"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="540dp"
        android:layout_gravity="center_horizontal"
        android:text="Option 4"
        android:textSize="20dp" />

</FrameLayout>